[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=1

[metadata]
description-file = README.md

[doc]
source-dir = docs/src
build-dir = docs/build

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
